--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.4.0",
     "uuid": "^8.3.2",
-    "nodemon": "^2.0.7"
+    "ws": "^7.5.6"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
